--- a/index.html
+++ b/index.html
@@ -11,18 +11,16 @@
     <body>
         <div id="corpo">
             <span id="span_titolo">PHOTO </span>
-            <span id="span_titolo_verde">GUESSER</span>
+            <span id="span_titolo_verde"><mark>GUESSER</mark></span>
         </div>
         <hr>
+        <h1 id="punti">PUNTI: </h1>
         <img id="mostra_immagine">
         <form>
             <input type="text" placeholder="-----" id="testo_input">
         </form>
         <button id="bottone_invio" type="button" onclick="checknome()"></button>
         <div id="testo_perdita"></div>
-        <p id="ricomincia">
-
-        </p>
         <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
