--- a/index.html
+++ b/index.html
@@ -5,24 +5,13 @@
         <title>PHOTO GUESSR</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style_home.css">
         <link rel="icon" type="image/x-icon" href="./immagini/favicon/icon.png">
-    
     </head>
-
     <body>
         <div id="corpo">
-            <span id="span_titolo">PHOTO </span>
-            <span id="span_titolo_verde"><mark>GUESSER</mark></span>
+            <img id="titolo" src="./logo/titolo.png" alt="Photo GUESSR">
         </div>
-        <hr>
-        <h1 id="punti">PUNTI: </h1>
-        <img id="mostra_immagine">
-        <form>
-            <input type="text" placeholder="-----" id="testo_input">
-        </form>
-        <button id="bottone_invio" type="button" onclick="checknome()"></button>
-        <button id="ricominciare" type="button" onclick="ricomincia()"><img id="icona_rotella" src="./icone/caricamento.png"></button>
-        <script type="text/javascript" src="script.js"></script>
+        <button id="bottone_inizio" type="button" onclick="window.location.href='gioco.html'"><img id="icona_play" src="./icone/play.png"></button>
     </body>
 </html>
