--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
             <img id="titolo" src="./logo/titolo.png" alt="Photo GUESSR">
         </div>
         <button id="bottone_inizio" type="button" onclick="window.location.href='gioco.html'"><img id="icona_play" src="./icone/play.png"></button>
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
